[gd_scene load_steps=15 format=3 uid="uid://be60qtgixk82q"]

[ext_resource type="PackedScene" uid="uid://bdurwr0lwd8oq" path="res://src/Troops/TroopBase.tscn" id="1"]
[ext_resource type="PackedScene" path="res://src/Troops/Weapons/AIGun.tscn" id="3"]
[ext_resource type="Material" path="res://assets/materials/command_post/red.tres" id="4"]
[ext_resource type="Script" path="res://src/Troops/AI/Troop.gd" id="5"]
[ext_resource type="Script" path="res://src/Troops/AI/AITroopStateMachine.gd" id="6"]
[ext_resource type="Script" path="res://src/Troops/AI/AttackEnemy.gd" id="7"]
[ext_resource type="Script" path="res://src/Troops/AI/EnterShip.gd" id="8"]
[ext_resource type="Script" path="res://src/Troops/AI/ConquerGroundCPs.gd" id="9"]
[ext_resource type="Script" path="res://src/Troops/AI/TroopEnemyDetection.gd" id="10"]
[ext_resource type="Script" path="res://src/Troops/AI/ChooseObjective.gd" id="11"]
[ext_resource type="Material" path="res://assets/materials/command_post/blue.tres" id="13"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="1"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="2"]

[sub_resource type="BoxMesh" id="3"]
size = Vector3(0.5, 0.5, 0.05)

[node name="AITroop" instance=ExtResource("1")]
script = ExtResource("5")
red_mat = ExtResource("4")
blue_mat = ExtResource("13")

[node name="BoneAttachment3D" parent="Model/Skeleton3d" index="2"]
transform = Transform3D(-0.896398, -0.356442, 0.263473, 0.322697, -0.117294, 0.939206, -0.303868, 0.926926, 0.220165, -0.12208, 1.16277, 0.232931)

[node name="AIGun" parent="Model/Skeleton3d/BoneAttachment3D/Weapons" index="0" instance=ExtResource("3")]
unique_name_in_owner = true
transform = Transform3D(0.351531, 0.897547, 0.266149, -0.701629, 0.0643727, 0.709629, 0.619792, -0.436194, 0.652375, 16.9136, 4.26721, -1.71462)

[node name="AnimationTree" parent="." index="6"]
parameters/StateMachine/playback = SubResource("1")
parameters/StateMachine/walk/OneShotStateMachine/playback = SubResource("2")

[node name="EnemyDetection" type="Node3D" parent="." index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.78536, 0)
script = ExtResource("10")

[node name="Timer" type="Timer" parent="EnemyDetection" index="0"]
wait_time = 3.0
autostart = true

[node name="InitTimer" type="Timer" parent="." index="11"]
one_shot = true
autostart = true

[node name="TeamIndicator" type="MeshInstance3D" parent="." index="12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.55491, 0.321415)
mesh = SubResource("3")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="13"]
path_max_distance = 4.0
max_speed = 6.0

[node name="AIStateMachine" type="Node" parent="." index="14"]
script = ExtResource("6")
START_STATE = NodePath("ChooseObjective")

[node name="ChooseObjective" type="Node" parent="AIStateMachine" index="0"]
script = ExtResource("11")

[node name="ConquerGroundCPs" type="Node" parent="AIStateMachine" index="1"]
script = ExtResource("9")

[node name="ConquestTimer" type="Timer" parent="AIStateMachine/ConquerGroundCPs" index="0"]
wait_time = 10.0
one_shot = true

[node name="EnterShip" type="Node" parent="AIStateMachine" index="2"]
script = ExtResource("8")

[node name="WaitTimer" type="Timer" parent="AIStateMachine/EnterShip" index="0"]
wait_time = 2.0
one_shot = true

[node name="AttackEnemy" type="Node" parent="AIStateMachine" index="3"]
script = ExtResource("7")

[node name="CheckCurrentEnemyTimer" type="Timer" parent="." index="15"]
autostart = true

[connection signal="timeout" from="EnemyDetection/Timer" to="EnemyDetection" method="_on_Timer_timeout"]
[connection signal="timeout" from="InitTimer" to="." method="_on_InitTimer_timeout"]
[connection signal="navigation_finished" from="NavigationAgent3D" to="AIStateMachine/ConquerGroundCPs" method="_on_navigation_agent_3d_navigation_finished"]
[connection signal="navigation_finished" from="NavigationAgent3D" to="AIStateMachine/EnterShip" method="_on_navigation_agent_3d_navigation_finished"]
[connection signal="timeout" from="AIStateMachine/ConquerGroundCPs/ConquestTimer" to="AIStateMachine/ConquerGroundCPs" method="_on_ConquestTimer_timeout"]
[connection signal="timeout" from="AIStateMachine/EnterShip/WaitTimer" to="AIStateMachine/EnterShip" method="_on_WaitTimer_timeout"]

[editable path="Model"]
